<resources>
    <string name="app_name">simulator_call</string>

    <string name="login">login</string>
    <string name="simulador">Simulador</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="registrar">Registrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="r_senha">r_senha</string>
    <string name="nome">nome</string>
    <string name="cadastro">Cadastro</string>
    <string name="c">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ast">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="ligar">#</string>
    <string name="bligar">ligar</string>


</resources>
