<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tecinfo.simulator_call.CallActivity">

    <TextView
        android:id="@+id/t_entrada"
        android:layout_width="260dp"
        android:layout_height="89dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/bt_c"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_c"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/t_entrada"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="355dp"
        android:layout_height="357dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/bt_2"
                    android:layout_width="0dp"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/bt_3"
                    android:layout_width="0dp"
                    android:layout_height="92dp"
                    android:layout_weight="1"
                    android:text="@string/_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_4"
                        android:layout_width="wrap_content"
                        android:layout_height="89dp"
                        android:layout_weight="1"
                        android:text="@string/_4" />

                    <Button
                        android:id="@+id/bt_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_5" />

                    <Button
                        android:id="@+id/bt_6"
                        android:layout_width="wrap_content"
                        android:layout_height="89dp"
                        android:layout_weight="1"
                        android:text="@string/_6" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_7"
                        android:layout_width="wrap_content"
                        android:layout_height="91dp"
                        android:layout_weight="1"
                        android:text="@string/_7" />

                    <Button
                        android:id="@+id/bt_8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_8" />

                    <Button
                        android:id="@+id/bt_9"
                        android:layout_width="wrap_content"
                        android:layout_height="91dp"
                        android:layout_weight="1"
                        android:text="@string/_9" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_aster"
                        android:layout_width="wrap_content"
                        android:layout_height="81dp"
                        android:layout_weight="1"
                        android:text="@string/ast" />

                    <Button
                        android:id="@+id/bt_0"
                        android:layout_width="wrap_content"
                        android:layout_height="81dp"
                        android:layout_weight="1"
                        android:text="@string/_0" />

                    <Button
                        android:id="@+id/bt_hash"
                        android:layout_width="wrap_content"
                        android:layout_height="81dp"
                        android:layout_weight="1"
                        android:text="@string/hash" />

                    <Button
                        android:id="@+id/bt_ligar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bligar" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
